deploy/k8s/beat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beat
  template:
    metadata:
      labels:
        app: beat
    spec:
      containers:
        - name: beat
          image: monitorup:local
          imagePullPolicy: IfNotPresent
          command: ["celery", "-A", "celery_app", "beat", "--loglevel=info"]
